--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.android.miwok"
-        minSdkVersion 15
+        minSdkVersion 23
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -26,4 +26,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:23.3.0'
     implementation 'com.android.support:support-v4:23.3.0'
     implementation 'com.android.support:design:23.3.0'
+    implementation 'com.android.support:support-v4:23.0.0'
 }
